--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "virtual-event-starter-kit",
+  "name": "Fiesta de Hackarones",
   "description": "Starter kit for your virtual event.",
   "private": true,
-  "repository": "vercel/virtual-event-starter-kit",
+  "repository": "lfbox7/fiesta-de-hackarones",
   "author": "Vercel Inc.",
   "homepage": "https://demo.vercel.events",
   "license": "Apache-2.0",
@@ -29,6 +29,7 @@
     "ms": "2.1.3",
     "next": "10.0.3",
     "nprogress": "0.2.0",
+    "postcss": "^8.2.1",
     "puppeteer-core": "5.5.0",
     "react": "16.8.0",
     "react-aria": "3.2.0",
@@ -57,8 +58,8 @@
     "eslint-config-prettier": "7.0.0",
     "eslint-plugin-react": "7.21.5",
     "eslint-plugin-react-hooks": "4.2.0",
-    "postcss-flexbugs-fixes": "8.1.4",
-    "postcss-hover-media-feature": "8.0.0",
+    "postcss-flexbugs-fixes": "5.0.2",
+    "postcss-hover-media-feature": "1.0.0",
     "postcss-preset-env": "6.7.0",
     "prettier": "2.2.1",
     "typescript": "4.1.3"
